Criado a documentação do swagger do modulo de serviços
