# docs/swagger.json
@@ -109,7 +109,7 @@
                 "tags": [
                     "barber"
                 ],
-                "summary": "List os barbeiros da barbearia",
+                "summary": "Lista os barbeiros da barbearia",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -117,6 +117,63 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/barber.ListBarbers"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/barber/service/create": {
+            "post": {
+                "description": "Cria um novo serviço para a barbeiro e barbearia",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "Criação dos serviços",
+                "parameters": [
+                    {
+                        "description": "Create service",
+                        "name": "barber",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.CreateService"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Sem conteúdo"
+                    }
+                }
+            }
+        },
+        "/barber/service/list": {
+            "get": {
+                "description": "Lista todos os serviços ofertados pela barbearia",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "service"
+                ],
+                "summary": "Lista os serviços da barbearia",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/service.ListServices"
                             }
                         }
                     }
@@ -206,6 +263,47 @@
                 },
                 "senha": {
                     "type": "string"
+                }
+            }
+        },
+        "service.CreateService": {
+            "type": "object",
+            "required": [
+                "nome",
+                "preco"
+            ],
+            "properties": {
+                "duracao": {
+                    "type": "string"
+                },
+                "nome": {
+                    "type": "string"
+                },
+                "preco": {
+                    "type": "number"
+                }
+            }
+        },
+        "service.ListServices": {
+            "type": "object",
+            "properties": {
+                "data_atualizacao": {
+                    "type": "string"
+                },
+                "data_criacao": {
+                    "type": "string"
+                },
+                "duracao": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nome": {
+                    "type": "string"
+                },
+                "preco": {
+                    "type": "number"
                 }
             }
         }
